# gcs-emulator

./: .dockerignore  .env-gcloud  .gitignore  AI_AGENT_BUILD_ALL_PROMPT.md  ANALYSIS_INDEX.md  API_SPECIFICATION.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_AND_PLAN.md  AUTO_MODE_VPC_IMPLEMENTATION.md  AWS_VS_GCS_COMPARISON.md  CLASSIC_TRAP_EXPLAINED.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  COMPUTE_ARCHITECTURE_ANALYSIS.md  COMPUTE_ENGINE_GUIDE.md  COMPUTE_FIX_SUMMARY.md  COMPUTE_READY.md  CONTEXT_CHECKPOINT.md  CONTEXT_MANAGEMENT_README.md  CURRENT_INVENTORY.md  DEMO_DAY_QUICK_START.md  DEMO_READY_CHECKLIST.md  Dockerfile  EXECUTION_PLAN.md  EXECUTIVE_SUMMARY.md  FAILURE_ANALYSIS.md  FIREWALL_IMPLEMENTATION.md  GCLOUD_CLI_ALL_4_SERVICES.md  GCLOUD_CLI_COMPLIANCE.md  GCLOUD_CLI_LIMITATIONS.md  GCLOUD_COMMANDS.md  GCLOUD_COMMANDS_REFERENCE.md  GCLOUD_COMMANDS_TEST_REPORT.md  GCLOUD_TEST_RESULTS.md  GCP_COMPUTE_SDK_COMPATIBILITY_REPORT.md  GCP_SDK_FINDINGS.md  GCS_EMULATOR_VS_LOCALSTACK_S3_COMPARISON.md  GCS_GAPS_VS_AWS.md  (+91 more)
Files/: AI_AGENT_PROMPT.md  CLAUDE_UPDATED.md  CLEANUP_CHECKLIST.md  COMPLETE_PACKAGE_GUIDE.md  DEVELOPMENT_RULES.md  DOCUMENTATION_SUMMARY.md  QUICK_START_CLEANUP.md  SKILLS_ROADMAP.md
app/: cli.py  config.py  db.py  factory.py
backend/: requirements.txt
backups/: gcs_stimulator_backup_20260205_082309.sql  gcs_stimulator_backup_full.sql
docs/: SDK_IMPLEMENTATION_SUMMARY.md  SDK_INTEGRATION.md
examples/: gcloud-cli.md  python-sdk.md
frontend/: Dockerfile  index.html  package.json  (+1 more)
(+711 files in other folders)
